fix: clean up footer CSS and align styling with responsive logo display

--- a/static/css/bulma.css
+++ b/static/css/bulma.css
@@ -71,9 +71,9 @@
   --bulma-speed: 86ms;
   --bulma-arrow-color: var(--bulma-link);
   --bulma-loading-color: var(--bulma-border);
-  --bulma-burger-h: var(--bulma-link-h);
-  --bulma-burger-s: var(--bulma-link-s);
-  --bulma-burger-l: var(--bulma-link-l);
+  --bulma-burger-h: var(--bulma-text-h);
+  --bulma-burger-s: var(--bulma-text-s);
+  --bulma-burger-l: var(--bulma-text-l);
   --bulma-burger-border-radius: 0.5em;
   --bulma-burger-gap: 5px;
   --bulma-burger-item-height: 2px;
@@ -972,9 +972,9 @@
     --bulma-speed: 86ms;
     --bulma-arrow-color: var(--bulma-link);
     --bulma-loading-color: var(--bulma-border);
-    --bulma-burger-h: var(--bulma-link-h);
-    --bulma-burger-s: var(--bulma-link-s);
-    --bulma-burger-l: var(--bulma-link-l);
+    --bulma-burger-h: var(--bulma-text-h);
+    --bulma-burger-s: var(--bulma-text-s);
+    --bulma-burger-l: var(--bulma-text-l);
     --bulma-burger-border-radius: 0.5em;
     --bulma-burger-gap: 5px;
     --bulma-burger-item-height: 2px;
@@ -1890,9 +1890,9 @@
   --bulma-speed: 86ms;
   --bulma-arrow-color: var(--bulma-link);
   --bulma-loading-color: var(--bulma-border);
-  --bulma-burger-h: var(--bulma-link-h);
-  --bulma-burger-s: var(--bulma-link-s);
-  --bulma-burger-l: var(--bulma-link-l);
+  --bulma-burger-h: var(--bulma-text-h);
+  --bulma-burger-s: var(--bulma-text-s);
+  --bulma-burger-l: var(--bulma-text-l);
   --bulma-burger-border-radius: 0.5em;
   --bulma-burger-gap: 5px;
   --bulma-burger-item-height: 2px;
@@ -7177,7 +7177,7 @@ button.dropdown-item.is-selected {
   --bulma-navbar-item-selected-background-l: var(--bulma-link-l);
   --bulma-navbar-item-selected-color-l: var(--bulma-link-invert-l);
   --bulma-navbar-item-img-max-height: 1.75rem;
-  --bulma-navbar-burger-color: var(--bulma-link);
+  --bulma-navbar-burger-color: var(--bulma-text);
   --bulma-navbar-tab-hover-background-color: transparent;
   --bulma-navbar-tab-hover-border-bottom-color: var(--bulma-link);
   --bulma-navbar-tab-active-color: var(--bulma-link);
@@ -7336,9 +7336,9 @@ button.dropdown-item.is-selected {
   --bulma-navbar-h: var(--bulma-link-h);
   --bulma-navbar-s: var(--bulma-link-s);
   --bulma-navbar-l: var(--bulma-link-l);
-  --bulma-burger-h: var(--bulma-link-h);
-  --bulma-burger-s: var(--bulma-link-s);
-  --bulma-burger-l: var(--bulma-link-invert-l);
+  --bulma-burger-h: var(--bulma-text-h);
+  --bulma-burger-s: var(--bulma-text-s);
+  --bulma-burger-l: var(--bulma-text-invert-l);
   --bulma-navbar-background-color: var(--bulma-link);
   --bulma-navbar-item-background-l: var(--bulma-link-l);
   --bulma-navbar-item-color-l: var(--bulma-link-invert-l);
